# NeoChatroom

./: CMakeLists.txt  LICENSE.txt  NeoChatroom.sln  README.md  README_EN.md
.github/workflows/: releases.yml
NeoChatroom/: CMakeLists.txt  NeoChatroom.vcxproj  NeoChatroom.vcxproj.filters  config.json  data.txt  database.db  keyword.txt  powertest.py
NeoChatroom/data/: datamanage.cpp
NeoChatroom/html/: chatlist.html  chatroom.js  index.html  login.html
NeoChatroom/html/files/: terms.html  updates.html
NeoChatroom/http server/: ctrl.cpp  server.cpp
NeoChatroom/http server/server/: chatroom.cpp  chatroom.h  roommanager.cpp  roommanager.h
NeoChatroom/include/: Server.h  config.h  datamanage.h  httplib.h  log.h  resource.h  tool.h
NeoChatroom/tool/: tool.cpp
NeoChatroom/tool/config/: config.cpp
NeoChatroomCmake/: CMakeLists.txt  NeoChatroom.vcxproj  NeoChatroom.vcxproj.filters  config.json  database.db  main.cpp  server.crt  server.csr
NeoChatroomCmake/data/: datamanage.cpp
NeoChatroomCmake/html/: chatlist.js  chatroom.js  control.html  index.html  marked.min.js
NeoChatroomCmake/html/files/: controllogin.html  updates.html
NeoChatroomCmake/http server/: ControlServer.cpp  ControlServer.h  RedirectServer.cpp  RedirectServer.h  ctrl.cpp  server.cpp
NeoChatroomCmake/http server/html.del/: index.html  login.html
NeoChatroomCmake/http server/server/: chatDBmanager.cpp  chatDBmanager.h  chatroom.cpp  chatroom.h  guide.cpp  roommanager.cpp  roommanager.h  serverconfig.cpp  serverconfig.h
NeoChatroomCmake/include/: Server.h  datamanage.h  tool.h
NeoChatroomCmake/json/: json.h
NeoChatroomCmake/src/lib/: httplib.h
NeoChatroomCmake/src/lib/json/: jsoncpp.cpp
NeoChatroomCmake/src/server/http/server/src/: main.cpp
NeoChatroomCmake/src/server/http/server/src/chat/: chatDBmanager.cpp  chatDBmanager.h  chatroom.cpp  chatroom.h  privatechat.cpp  privatechat.h  roommanager.cpp  roommanager.h
NeoChatroomCmake/src/server/http/server/src/chat/paste/: cloudpaste.cpp  cloudpaste.h
NeoChatroomCmake/src/server/http/server/src/config/: config.cpp  config.h  serverconfig.cpp
NeoChatroomCmake/src/server/http/server/src/data/: datamanage.cpp  datamanage.h
NeoChatroomCmake/src/server/http/server/src/server/: ControlServer.cpp  RedirectServer.cpp  Server.h  server.cpp
NeoChatroomCmake/src/server/http/server/src/server/guide/: ctrl.cpp  guide.cpp
NeoChatroomCmake/src/server/http/server/src/tool/: log.cpp  log.h  tool.cpp  tool.h
NeoChatroomCmake/src/web/html/: chatlist.html  chatlist.js  chatroom.js  control.html  index.html  login.html
NeoChatroomCmake/src/web/html/files/: chatlist-paste.js  chatroom-paste.js  paste-page.html  paste.html  paste.js  privatechat.html  privatechat.html.js  privatechatlist.js  terms.html
NeoChatroomCmake/tool/: log.cpp  tool.cpp
